# SchoolWork

./: .gitignore  README.md
CMPE-351/Assignment1/: mynotebook.IPYNB
CMPE-351/Assignment2/: ADA-1256-Assn2.ipynb
CMPE-452/Project/: README.md
Capstone/: README.md
Capstone/Arduino/: HapticPad.ino
ELEC-475/Assignment1/: MLP.8.pth  lab1.py  main.py  model.py  train.py
ELEC-475/Assignment2/: 100_terminal_output  10k_terminal_output  1k_terminal _output
ELEC-475/Assignment3/: Terminal_Output_Testing_Mod_e20_b100.txt  Terminal_Output_Testing_Vanilla_e20_b100.txt  Terminal_Output_Training_Mod_e20_b100.txt  Terminal_Output_Training_Vanilla_e20_b100.txt  test_mod.py  test_mod.txt  test_vanilla.py  test_vanilla.txt  train_mod.py  train_mod.txt  train_vanilla.py  train_vanilla.txt
ELEC-475/Assignment4/: KittiROIs.txt  accuracy_train_e30.txt  showKitti.py  showKitti.txt  step3_test.py  step3_test.txt  step3_test_accuracy.txt  step3_train.py  step3_train.txt  step4.py  step4_1.txt  step4_2n3.txt  terminal_output_train_e30.txt  test.py
ELEC-475/Assignment5/: model.py  select_pet_noses.py  show_pet_noses.py  test.py  test.txt  train.py  train.txt
ELEC-477/a1/: Makefile  client.cpp  client.hpp  clientStub.cpp  clientStub.hpp  main.cpp  rpc.pb.cc  rpc.pb.h  rpc.proto  server.cpp  server.hpp  server_db.gdbm  service.cpp  service.hpp  testcase1.txt
ELEC-477/a2/: E477DirectoryService.pb.cc  E477DirectoryService.proto  E477KV.proto  KV.pb.cc  Makefile  kvclient1.cpp  kvclient1.hpp  kvclientstub.cpp  kvserver.cpp  kvserver.hpp  kvservice.cpp  kvservice.hpp  main.cpp  sdservice.cpp  sdservice.hpp  sdstub.cpp  sdstub.hpp
ELEC-477/a3/: DNS_custom.hpp  DS.pb.cc  DS.pb.h  E477DirectoryService.pb.h  KV.pb.h  Makefile  kvclientstub.hpp  kvserver.cpp  kvserver.hpp  kvserverstub.cpp  kvserverstub.hpp  kvservice.cpp  kvservice.hpp  main.cpp  main_t2.cpp  sdserver.cpp  sdserver.hpp  sdservice.cpp  sdstub.cpp  testcase1.txt  (+1 more)
ELEC-477/a4/: CMakeLists.txt  aircraft.cpp  dataSorted.csv  fixData.sh  flights.cpp  genData.cpp  query.cpp  statekey.idl  subscriber.cpp  team25.code-workspace  torontoAD.cpp  torontoCentre.cpp  zoneTransfer.idl
ELEC-477/a4/terminalOutput/: flights.txt  query_AC180.txt  query_KM20.txt  query_PT130.txt  query_WJ910.txt  torontoAD.txt  torontoCentre.txt
(+70 files in other folders)
